--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,33 @@
 #chatbot-display {
   white-space: pre-wrap;
 }
+
+#chatbot-container {
+  background-color: #f2cc8f;
+  border-radius: 10px;
+}
+
+img {
+  border-radius: 20px;
+}
+
+h1 {
+  background-color: #3D405B;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+p {
+  color: #3D405B;
+}
+
+input {
+  height: 25px;
+  width: 300px;
+  background-color: #81B29A;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  margin: 20px;
+  color: #3D405B;
+}
