--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ body {
 
 .user-message {
   background-color: #c1121f;
-  color: #001b29;
+  color: #fdf0d5;
   align-self: flex-end;
   margin-left: 90px;
   border-radius: 20px 20px 0 20px;
